tests/cases/errors/runtime_divide_by_zero.lox
// Lox follows IEEE 754: 1/0 yields infinity rather than a runtime error.
// expect: inf
print 1 / 0;
